Fixed help message

--- a/src/main/webapp/help.html
+++ b/src/main/webapp/help.html
@@ -1,6 +1,5 @@
 <div>
     <p>
-        Activate a revision for the job.
-        The job revision is available by the JOB_REVISION environment variable.
+        Check if the computed revision value of an Ivy dependency has changed between 2 time intervals.
     </p>
 </div>
