Add capacity for multiple properties files
Add a way for a user to add multiple properties files by separating
their paths with a semi-colon.

As with previously, paths supports variables.

The content of all the referenced files will be used to create a single
temp file.

--- a/src/main/resources/org/jenkinsci/plugins/ivytrigger/IvyTrigger/help-propertiesFilePath.html
+++ b/src/main/resources/org/jenkinsci/plugins/ivytrigger/IvyTrigger/help-propertiesFilePath.html
@@ -1,6 +1,7 @@
 <div>
     <p>
-        Give a properties file path. <br/>
+        Give one or more properties file path. <br/>
+        Separate file paths with a semi-colon<br/>
         Properties will be injected as variables in the ivy settings file.
     </p>
 </div>
