Added ability to download Ivy settings through URL

--- a/src/main/resources/org/jenkinsci/plugins/ivytrigger/IvyTrigger/help-ivySettingsPath.html
+++ b/src/main/resources/org/jenkinsci/plugins/ivytrigger/IvyTrigger/help-ivySettingsPath.html
@@ -1,6 +1,7 @@
 <div>
     <p>
         Give the path of an ivySetting.xml file.<br/>
-        The path can be absolute or relative to the workspace of the latest build.
+        The path can be absolute or relative to the workspace of the latest build
+        or it can be an URL to retrieve/download.
     </p>
 </div>
