Cleanup - Improve wording
There is also no extra paragraph required, it already uses an div element.

--- a/src/main/resources/org/jenkinsci/plugins/ivytrigger/IvyTrigger/help-downloadArtifacts.html
+++ b/src/main/resources/org/jenkinsci/plugins/ivytrigger/IvyTrigger/help-downloadArtifacts.html
@@ -1,9 +1,7 @@
 <div>
-    <p>
-        Whether or not to download the artifacts within a dependency.<br/>
-        If this is false, then much less disk space is used. However a change in the
-        artifacts, or the addition or removal of artifacts, of a dependency that does
-        not <strong>also</strong> cause a version number change in the dependency
-        will not be detected.
-    </p>
+    Whether or not to download the artifacts within a dependency.<br/>
+    If this is false, then much less disk space is used. However a change in the
+    artifacts, or the addition or removal of artifacts, of a dependency that does
+    not <strong>also</strong> cause a version number change in the dependency,
+    will not be detected.
 </div>
