--- a/src/main/resources/org/jenkinsci/plugins/ivytrigger/IvyTrigger/help-ivyPath.html
+++ b/src/main/resources/org/jenkinsci/plugins/ivytrigger/IvyTrigger/help-ivyPath.html
@@ -1,6 +1,4 @@
 <div>
-    <p>
-        Give the path of an ivy file.<br/>
-        The path can be absolute or relative to the workspace of the latest build.
-    </p>
+    The path of an ivy file.<br>
+    It can be absolute or relative to the workspace of the latest build.
 </div>
