--- a/src/main/resources/org/jenkinsci/plugins/ivytrigger/IvyTrigger/help-propertiesContent.html
+++ b/src/main/resources/org/jenkinsci/plugins/ivytrigger/IvyTrigger/help-propertiesContent.html
@@ -1,6 +1,4 @@
 <div>
-    <p>
-        Give a properties content. <br/>
-        Properties will be injected as variables in the ivy settings file.
-    </p>
+    Properties content.<br>
+    Properties will be injected as variables in the ivy settings file.
 </div>
