--- a/src/main/resources/org/jenkinsci/plugins/ivytrigger/IvyTrigger/help-propertiesFilePath.html
+++ b/src/main/resources/org/jenkinsci/plugins/ivytrigger/IvyTrigger/help-propertiesFilePath.html
@@ -1,7 +1,5 @@
 <div>
-    <p>
-        Give one or more properties file path. <br/>
-        Separate file paths with a semi-colon<br/>
-        Properties will be injected as variables in the ivy settings file.
-    </p>
+    One or more properties file path(s).<br>
+    Separate file paths with a semi-colon.<br>
+    Properties will be injected as variables into the ivy settings file.
 </div>
