--- a/src/main/webapp/help.html
+++ b/src/main/webapp/help.html
@@ -1,5 +1,3 @@
 <div>
-    <p>
-        Check if the computed revision value of an Ivy dependency has changed between 2 time intervals.
-    </p>
+    Check if the computed revision value of an Ivy dependency has changed between two time intervals.
 </div>
